--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=MercadoFipp
 spring.datasource.url=jdbc:postgresql://localhost/mercado_fipp
 spring.datasource.username=postgres
 spring.datasource.password=postgres123
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
